--- a/communication.Rmd
+++ b/communication.Rmd
@@ -5,6 +5,8 @@ output:
   html_document:
     df_print: paged
     theme: flatly
+params:
+  interactive: FALSE
 ---
 
 ```{r setup, include=FALSE}
@@ -18,6 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Cars dataset
 
 ```{r cars}
+
 summary(cars)
 ```
 
@@ -25,8 +28,24 @@ summary(cars)
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+
+
+test <- function(){
+  
+  if(params$interactive == TRUE){
+    
+  print('This is triggered by the interactive param being set to TRUE')
+    
+} else {
+  
+  print('This is triggered by the interactive param being set to FALSE')
+}
+  
+}
+
+test()
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
