--- a/communication.Rmd
+++ b/communication.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "communication"
+title: "Data analysis write-ups"
 output: 
   pdf_document: default
   html_document:
@@ -9,38 +9,38 @@ params:
   interactive: FALSE
 ---
 
-```{r setup, include=FALSE}
+# Overview
+Describe the problem. What substantive question are you trying to address? This needn’t be long, but it should be clear.
 
-# https://www.guru99.com/r-generalized-linear-model.html
+# Data and model
+What data did you use to address the question, and how did you do it? When describing your approach, be specific. For example:
+
+Don’t say, _“I ran a regression”_ when you instead can say, _“I fit a linear regression model to predict price that included a house’s size and neighborhood as predictors.”_
+
+Justify important features of your modeling approach. For example: _“Neighborhood was included as a categorical predictor in the model because Figure 2 indicated clear differences in price across the neighborhoods.”_
+
+Sometimes your Data and Model section will contain plots or tables, and sometimes it won’t. If you feel that a plot helps the reader understand the problem or data set itself—as opposed to your results—then go ahead and include it. A great example here is Tables 1 and 2 in the main paper on the PREDIMED study. These tables help the reader understand some important properties of the data and approach, but not the results of the study itself.
+
+# Results
+In your results section, include any figures and tables necessary to make your case. Label them (Figure 1, 2, etc), give them informative captions, and refer to them in the text by their numbered labels where you discuss them. Typical things to include here may include: pictures of the data; pictures and tables that show the fitted model; tables of model coefficients and summaries.
+
+# Conclusion
+What did you learn from the analysis? What is the answer, if any, to the question you set out to address? i.e., does just rephrase the problem, present **solution(s)** to the problem?
+
+
+```{r setup, include=FALSE}
 
 knitr::opts_chunk$set(echo = TRUE)
 
-### libraries ----
-
-library(arm)
-library(car)
-library(ggplot2)
-library(lattice)
-library(lawstat)
-library(outliers)
 library(tidyverse)
 
 ```
 
-## Problem statement
 
-## Solution statement
-
-## Everything else
-
-
-
-```{r cars}
-
-data_adult <-read.csv("https://raw.githubusercontent.com/guru99-edu/R-Programming/master/adult.csv")
+```{r example - data exploration}
 
 #This inspects the dataframe and tells us what sort of data each of the columns are 
-str(data_adult)
+str(adult_income)
 
 # 'data.frame':	48842 obs. of  10 variables:
 #  $ x              : int  1 2 3 4 5 6 7 8 9 10 ...
@@ -54,12 +54,11 @@ str(data_adult)
 #  $ hours.per.week : int  40 50 40 40 30 30 40 32 40 10 ...
 #  $ income         : chr  "<=50K" "<=50K" ">50K" ">50K" ...
 
-dim(data_adult)
+dim(adult_income)
 # size of the dataframe - 48842 rows, 10 columns
 
-# DATA EXPLORATION
 # Are there missing values?
-colSums(is.na(data_adult))
+colSums(is.na(adult_income))
 
 #    x             age       workclass       education educational.num  marital.status 
 #    0               0               0               0               0               0 
@@ -105,20 +104,50 @@ dotchart(x$hours.per.week, cex = 0.7, pch = 16,
 
 ```
 
+# Overview
+Does the marital status of an individual impact on the reported income?
+
 ### Check continuous variables
 
 ```{r}
 
-continuous <-select_if(data_adult, is.numeric)
-summary(continuous)
+summary(select_if(adult_income, is.numeric))
 
 ```
 ```{r}
 
-# Histogram with kernel density curve
+# Histogram with kernel density curve (for loop)
 
-ggplot(continuous, aes(x = hours.per.week)) +
-    geom_density(alpha = .2, fill = "red") + theme_bw()
+fig <-  0
+
+for (var in names(select_if(adult_income, is.numeric))) {
+  
+  fig <- fig + 1
+      
+    p <- ggplot(adult_income, aes(x = .data[[var]])) +
+    geom_density(alpha = .2, fill = "red") + 
+    ggtitle(paste('Figure' , fig,':', var)) + theme_bw() 
+    
+    print(p)
+    # to save the plots to look at them later, you can also call ggsave().
+  
+}
+
+# Alternatively, Histogram with kernel density curve (map and purrr)
+
+response = set_names(names(select_if(adult_income, is.numeric)))
+response
+
+
+kernal_dens_fun = function(data, x) {
+    ggplot(adult_income, aes(x = .data[[x]])) +
+    geom_density(alpha = .2, fill = "red") +
+    ggtitle(paste('Figure' , ':', x)) +
+    theme_bw()
+}
+
+plots = map(response, ~kernal_dens_fun(adult_income, .x) )
+
 ```
 
 ```{r}
